--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-RPEG/nbproject/private/
+/RPEG/nbproject/private/
+/RPEG/build/
+/RPEG/dist/
+/RPEG/map.png
+/JavaFXApplication1/nbproject/private/
+/.RPEG/nbproject/private/
